--- a/asterisk-bin/etc/asterisk/extensions.conf
+++ b/asterisk-bin/etc/asterisk/extensions.conf
@@ -2,7 +2,25 @@
 [general]
 autofallthrough=yes
 [default]
+
 [phones]
 exten=>317,1,NoOp()
 exten=>317,n,Dial(SIP/serveur-1/${EXTEN},30)
 exten=>317,n,Hangup()
+
+exten=>8787,1,NoOp()
+exten=>8787,n,Set(CHANNEL(language)=fr)
+exten=>8787,n,Playback(demo-congrats)
+exten=>8787,n,Hangup()
+
+exten=>2703,1,NoOp()
+exten=>2703,1,Answer()
+exten=>2703,n,ConfBridge(14)
+exten=>2703,n,Hangup()
+
+
+exten=>100,1,NoOp()
+exten=>100,n,Answer()
+exten=>100,n,Monitor(wav,,b)
+exten=>100,n,Dial(SIP/serveur-1/${EXTEN},30)
+exten=>100,n,Hangup()
