--- a/asterisk-bin/etc/asterisk/sip.conf
+++ b/asterisk-bin/etc/asterisk/sip.conf
@@ -5,8 +5,8 @@ register=>group9:welcome@10.194.32.45/serveur-1
 
 [phones]
 
-[9000]
-username=9000
+[Alice]
+username=Alice
 secret=Alice
 type=friend
 host=dynamic
@@ -20,5 +20,4 @@ context=phones
 disallow=all
 allow=ulaw
 host=10.194.32.45
-;fromuser=Alice
 
